--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Haksu (yksisarvisen suunnittelupalvelu)</title>
+    <title>Haksu (yksisarvisen suunnittelupalvelu :) )</title>
 </head>
 <body>
 
